# shiplog-swarm

./: .gitignore  .history-sync-trigger  AGENTS.md  API_SURFACE.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  GEMINI.md  HANDOFF.md  README.md  RELEASE_HANDOFF_0.10.0.md  RELEASE_HANDOFF_0.11.0.md  RELEASE_HANDOFF_0.3.0.md  RELEASE_HANDOFF_0.9.0.md  ROADMAP.md  cargo-mutants.toml  codecov.yml  deny.toml  refactor_demo.py  route_utils.py  shiplog.py  shiplog_processor.py  test_shiplog.py  tests_smoke.py
apps/shiplog/: Cargo.toml  README.md
apps/shiplog/benches/: coverage.rs  id_generation.rs  redaction.rs  serialization.rs
apps/shiplog/src/: doctor.rs  github_activity.rs  github_auth.rs  ids.rs  intake_report_builder.rs  lib.rs  main.rs  ports.rs  status.rs
apps/shiplog/tests/: bundle.rs  cli_edge_cases.rs  cli_integration.rs  coverage_bdd.rs  coverage_boundary.rs  coverage_format_stability.rs  coverage_integration.rs  coverage_month_windows.rs  coverage_property.rs  coverage_snapshot.rs  coverage_week_windows.rs  coverage_window_len_days.rs  cross_platform_paths.rs  docs_commands.rs  e2e.rs  engine_bdd.rs  engine_bdd_workflows.rs  engine_cross_platform_paths.rs  engine_determinism.rs  engine_e2e_pipeline.rs  engine_error_paths.rs  engine_integration.rs  engine_property.rs  front_door_first_pack_smoke.rs  ids.rs  ingest_git.rs  ingest_github_edge_cases.rs  ingest_github_error_paths.rs  ingest_github_integration.rs  ingest_jira.rs  ingest_json.rs  ingest_json_adversarial.rs  ingest_json_compat.rs  ingest_json_cross_platform_paths.rs  ingest_json_edge_cases.rs  ingest_json_error_paths.rs  ingest_manual_bdd.rs  ingest_manual_edge_cases.rs  ingest_manual_error_paths.rs  ingest_manual_integration.rs  (+8 more)
crates/shiplog-bundle/: Cargo.toml
crates/shiplog-bundle/src/: layout.rs  lib.rs
crates/shiplog-bundle/tests/: cross_platform_paths.rs  error_paths.rs  format_stability.rs  integration.rs  output_layout_tests.rs  property.rs  snapshot.rs
crates/shiplog-cache/: Cargo.toml  README.md
crates/shiplog-cache/src/: expiry.rs  key.rs  lib.rs  sqlite.rs  stats.rs
crates/shiplog-cache/tests/: cache.rs  integration_expiry_tests.rs
crates/shiplog-cluster-llm/: Cargo.toml  README.md
crates/shiplog-cluster-llm/src/: lib.rs  parse.rs  prompt.rs
crates/shiplog-cluster-llm/tests/: integration.rs  property.rs
crates/shiplog-coverage/: Cargo.toml
crates/shiplog-coverage/benches/: coverage.rs
crates/shiplog-coverage/src/: lib.rs  windows.rs
crates/shiplog-coverage/tests/: bdd.rs  boundary.rs  format_stability.rs  integration.rs  property_tests.rs  snapshot.rs
crates/shiplog-engine/: Cargo.toml
crates/shiplog-engine/src/: lib.rs
crates/shiplog-engine/tests/: bdd.rs  bdd_workflows.rs  cross_platform_paths.rs  determinism.rs  e2e_pipeline.rs  error_paths.rs  integration.rs  property.rs
crates/shiplog-ids/: Cargo.toml
crates/shiplog-ids/benches/: id_generation.rs
crates/shiplog-ids/src/: lib.rs
crates/shiplog-ids/tests/: adversarial.rs  boundary.rs  determinism.rs  format_stability.rs  property_tests.rs  snapshot.rs  stability.rs  stress.rs
crates/shiplog-ingest-git/: Cargo.toml
crates/shiplog-ingest-git/src/: lib.rs
crates/shiplog-ingest-git/tests/: ingest_git_tests.rs
crates/shiplog-ingest-github/: Cargo.toml
crates/shiplog-ingest-github/src/: lib.rs
crates/shiplog-ingest-github/tests/: edge_cases.rs  error_paths.rs  integration.rs
crates/shiplog-ingest-gitlab/: Cargo.toml
crates/shiplog-ingest-gitlab/src/: lib.rs
crates/shiplog-ingest-gitlab/tests/: ingest_gitlab_tests.rs
crates/shiplog-ingest-json/: Cargo.toml
crates/shiplog-ingest-json/src/: lib.rs
crates/shiplog-ingest-json/tests/: adversarial.rs  compat.rs  cross_platform_paths.rs  edge_cases.rs  error_paths.rs  json.rs
crates/shiplog-ingest-linear/: Cargo.toml
crates/shiplog-ingest-linear/src/: lib.rs
crates/shiplog-ingest-linear/tests/: linear.rs
crates/shiplog-ingest-manual/: Cargo.toml
crates/shiplog-ingest-manual/src/: events.rs  lib.rs
crates/shiplog-ingest-manual/tests/: bdd.rs  edge_cases.rs  error_paths.rs  manual_events_integration.rs  property.rs
crates/shiplog-merge/: Cargo.toml  README.md
crates/shiplog-merge/src/: lib.rs
crates/shiplog-merge/tests/: merge_tests.rs
crates/shiplog-ports/: Cargo.toml
crates/shiplog-ports/src/: lib.rs
crates/shiplog-ports/tests/: ports_comprehensive.rs  ports_tests.rs
crates/shiplog-redact/: Cargo.toml  README.md
crates/shiplog-redact/benches/: redaction.rs
crates/shiplog-redact/src/: alias.rs  lib.rs  policy.rs  profile.rs  projector.rs  repo.rs
crates/shiplog-redact/tests/: adversarial.rs  bdd.rs  determinism.rs  edge_case_tests.rs  integration_policy_tests.rs  property_tests.rs  stress.rs
crates/shiplog-render-json/: Cargo.toml
crates/shiplog-render-json/src/: lib.rs
crates/shiplog-render-json/tests/: bdd.rs  format_stability.rs  output_quality.rs  proptests.rs  snapshot.rs
crates/shiplog-render-md/: Cargo.toml  README.md
crates/shiplog-render-md/src/: coverage.rs  lib.rs  receipt.rs  (+1 more)
crates/shiplog-schema/: Cargo.toml
crates/shiplog-team/: Cargo.toml  README.md
crates/shiplog-template/: Cargo.toml
crates/shiplog-testkit/: Cargo.toml  ROADMAP_TESTING_IMPLEMENTATION.md
crates/shiplog-workstreams/: Cargo.toml  README.md
fuzz/: Cargo.toml  README.md
fuzz/fuzz_targets/: bundle_checksum.rs  bundle_manifest.rs  cache_expiry.rs  cache_key.rs  cache_sqlite.rs  cache_stats.rs  cluster_llm_parse.rs  cluster_llm_prompt.rs  coverage_manifest.rs  date_windows.rs  fuzz_cache_key.rs  fuzz_ingest_jsonl.rs  fuzz_team_config.rs  fuzz_workstream_yaml.rs  parse_config.rs  parse_github_api.rs  parse_gitlab_api.rs  parse_jira_linear_api.rs  parse_manual_events.rs  parse_plugin_manifest.rs  parse_template.rs  parse_workstreams.rs  receipt_markdown.rs  redact_event.rs  render_md_packet.rs  schema_event_deser.rs  workstream_cluster.rs  workstream_layout.rs  workstream_receipt_policy.rs  workstream_yaml_roundtrip.rs
xtask/: Cargo.toml
xtask/src/: cli.rs  main.rs  policy.rs
xtask/tests/: cli.rs
(+745 files in other folders)
