[workspace]
resolver = "2"
members = [
  # Primary product
  "apps/shiplog",

  # Stable integration contracts
  "crates/shiplog-ids",
  "crates/shiplog-schema",
  "crates/shiplog-ports",

  # Product and trust surfaces
  "crates/shiplog-engine",
  "crates/shiplog-coverage",
  "crates/shiplog-workstreams",
  "crates/shiplog-redact",
  "crates/shiplog-bundle",
  "crates/shiplog-cache",
  "crates/shiplog-render-md",
  "crates/shiplog-render-json",

  # Source adapters
  "crates/shiplog-ingest-github",
  "crates/shiplog-ingest-git",
  "crates/shiplog-ingest-json",
  "crates/shiplog-ingest-manual",
  "crates/shiplog-ingest-gitlab",
  "crates/shiplog-ingest-jira",
  "crates/shiplog-ingest-linear",

  # Optional feature surfaces
  "crates/shiplog-cluster-llm",
  "crates/shiplog-team",
  "crates/shiplog-merge",

  # Dev-only support
  "crates/shiplog-testkit",

]

[workspace.package]
version = "0.3.0"
edition = "2024"
rust-version = "1.92"
license = "MIT OR Apache-2.0"
authors = ["Steven Zimmerman, CPA <git@effortlesssteven.com>"]
description = "Shipping packet generator for developers: compile GitHub activity into editable self-review packets with receipts."
homepage = "https://effortlessmetrics.com/shiplog"
repository = "https://github.com/EffortlessMetrics/shiplog"
keywords = ["developer-tools", "github", "self-review", "audit-trail", "changelog"]
categories = ["command-line-utilities", "development-tools"]

[workspace.dependencies]
anyhow = "1.0.102"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
serde_yaml = { package = "serde_yaml_ng", version = "0.10.0" }
toml = "1.1.2"
chrono = { version = "0.4.44", features = ["serde"] }
sha2 = "0.11.0"
hex = "0.4.3"
base64 = "0.22.1"
clap = { version = "4.6.1", features = ["derive"] }
reqwest = { version = "0.13.2", features = ["blocking", "json"] }
url = "2.5.8"
itertools = "0.14.0"
proptest = "1.11.0"
insta = { version = "1.46.3", features = ["yaml"] }
regex = "1.12.3"
zip = "8.1.0"
tokio = { version = "1.49.0", features = ["rt", "macros"] }
tempfile = "3.27.0"
assert_cmd = "2.0.16"
predicates = "3.1.3"
mutants = "0.0.4"
criterion = { version = "0.5", features = ["html_reports"] }

[workspace.lints.rust]
# deny rather than forbid so narrow crates can document intentional exceptions.
unsafe_code = "deny"
# Too many types lack Debug (53+); allow for now, revisit later
missing_debug_implementations = "allow"

[workspace.lints.clippy]
# Correctness
enum_glob_use = "warn"
# Style — too many hits (30+) across codebase; allow for now
needless_pass_by_value = "allow"
# Pedantic — too many hits (40+) across codebase; allow for now
cloned_instead_of_copied = "allow"
flat_map_option = "warn"

[profile.release]
codegen-units = 1
lto = "thin"
strip = "symbols"
