[workspace]
resolver = "2"
members = [
  # Primary product
  "apps/shiplog",

  # Dev-only support
  "crates/shiplog-testkit",
  "xtask",

]

[workspace.package]
version = "0.9.0"
edition = "2024"
rust-version = "1.95"
license = "MIT OR Apache-2.0"
authors = ["Steven Zimmerman, CPA <git@effortlesssteven.com>"]
description = "Evidence compiler for review-cycle work: collect receipts, coverage, gaps, and safe share packets."
homepage = "https://effortlessmetrics.com/shiplog"
repository = "https://github.com/EffortlessMetrics/shiplog"
keywords = ["developer-tools", "github", "self-review", "audit-trail", "changelog"]
categories = ["command-line-utilities", "development-tools"]

[workspace.dependencies]
anyhow = "1.0.102"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
serde_yaml = { package = "serde_yaml_ng", version = "0.10.0" }
toml = "1.1.2"
chrono = { version = "0.4.44", features = ["serde"] }
sha2 = "0.11.0"
hex = "0.4.3"
base64 = "0.22.1"
clap = { version = "4.6.1", features = ["derive"] }
reqwest = { version = "0.13.2", features = ["blocking", "json"] }
url = "2.5.8"
itertools = "0.14.0"
proptest = "1.11.0"
insta = { version = "1.47.2", features = ["yaml"] }
regex = "1.12.3"
zip = "8.6.0"
tokio = { version = "1.50.0", features = ["rt", "macros"] }
tempfile = "3.27.0"
assert_cmd = "2.2.1"
predicates = "3.1.3"
mutants = "0.0.4"
criterion = { version = "0.8", features = ["html_reports"] }
rusqlite = { version = "0.40.0", features = ["bundled", "chrono", "serde_json"] }

[workspace.lints.rust]
# deny rather than forbid so narrow crates can document intentional exceptions.
unsafe_code = "deny"
# Rust 1.95 lint floor (activated in PR #152); see policy/clippy-lints.toml.
unsafe_op_in_unsafe_fn = "deny"
unused_must_use = "deny"
unexpected_cfgs = "warn"
const_item_interior_mutations = "deny"
function_casts_as_integer = "deny"
unused_visibilities = "warn"
# Too many types lack Debug (53+); allow for now, revisit later
missing_debug_implementations = "allow"

[workspace.lints.clippy]
# Correctness
enum_glob_use = "warn"
# Style — too many hits (30+) across codebase; allow for now
needless_pass_by_value = "allow"
# Pedantic — too many hits (40+) across codebase; allow for now
cloned_instead_of_copied = "allow"
flat_map_option = "warn"
# Rust 1.94 / 1.95 ratchets (activated in PR #152); see policy/clippy-lints.toml.
same_length_and_capacity = "deny"
manual_checked_ops = "warn"
manual_take = "warn"
duration_suboptimal_units = "warn"
unnecessary_trailing_comma = "warn"
needless_type_cast = "warn"
manual_ilog2 = "warn"
decimal_bitwise_operands = "warn"
unnecessary_sort_by = "warn"

[profile.release]
codegen-units = 1
lto = "thin"
strip = "symbols"
