[package]
name = "shiplog-fuzz"
version = "0.0.0"
publish = false
edition = "2024"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
shiplog-workstreams = { path = "../crates/shiplog-workstreams" }
shiplog-schema = { path = "../crates/shiplog-schema" }
shiplog-ids = { path = "../crates/shiplog-ids" }
shiplog-redact = { path = "../crates/shiplog-redact" }
shiplog = { path = "../apps/shiplog" }
shiplog-ports = { path = "../crates/shiplog-ports", version = "0.6.0" }
shiplog-cluster-llm = { path = "../crates/shiplog-cluster-llm", version = "0.6.0" }
shiplog-team = { path = "../crates/shiplog-team" }
sha2 = "0.10.9"
hex = "0.4.3"
chrono = "0.4.44"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
serde_yaml = { package = "serde_yaml_ng", version = "0.10.0" }

# Prevent this from interfering with workspaces
[workspace]
members = ["."]

[[bin]]
name = "parse_jsonl"
path = "fuzz_targets/parse_jsonl.rs"
test = false
doc = false
bench = false

[[bin]]
name = "parse_workstreams"
path = "fuzz_targets/parse_workstreams.rs"
test = false
doc = false
bench = false

[[bin]]
name = "parse_github_api"
path = "fuzz_targets/parse_github_api.rs"
test = false
doc = false
bench = false

[[bin]]
name = "parse_config"
path = "fuzz_targets/parse_config.rs"
test = false
doc = false
bench = false

[[bin]]
name = "parse_manual_events"
path = "fuzz_targets/parse_manual_events.rs"
test = false
doc = false
bench = false

[[bin]]
name = "receipt_markdown"
path = "fuzz_targets/receipt_markdown.rs"
test = false
doc = false
bench = false

[[bin]]
name = "redact_event"
path = "fuzz_targets/redact_event.rs"
test = false
doc = false
bench = false

[[bin]]
name = "coverage_manifest"
path = "fuzz_targets/coverage_manifest.rs"
test = false
doc = false
bench = false

[[bin]]
name = "bundle_manifest"
path = "fuzz_targets/bundle_manifest.rs"
test = false
doc = false
bench = false

[[bin]]
name = "schema_event_deser"
path = "fuzz_targets/schema_event_deser.rs"
test = false
doc = false
bench = false

# ============================================================================
# ROADMAP Feature Fuzzing Targets
# ============================================================================

[[bin]]
name = "parse_gitlab_api"
path = "fuzz_targets/parse_gitlab_api.rs"
test = false
doc = false
bench = false

[[bin]]
name = "parse_jira_linear_api"
path = "fuzz_targets/parse_jira_linear_api.rs"
test = false
doc = false
bench = false

[[bin]]
name = "parse_template"
path = "fuzz_targets/parse_template.rs"
test = false
doc = false
bench = false

[[bin]]
name = "parse_plugin_manifest"
path = "fuzz_targets/parse_plugin_manifest.rs"
test = false
doc = false
bench = false

[[bin]]
name = "cache_key"
path = "fuzz_targets/cache_key.rs"
test = false
doc = false
bench = false

[[bin]]
name = "cache_stats"
path = "fuzz_targets/cache_stats.rs"
test = false
doc = false
bench = false

[[bin]]
name = "cache_expiry"
path = "fuzz_targets/cache_expiry.rs"
test = false
doc = false
bench = false

[[bin]]
name = "cache_sqlite"
path = "fuzz_targets/cache_sqlite.rs"
test = false
doc = false
bench = false

[[bin]]
name = "date_windows"
path = "fuzz_targets/date_windows.rs"
test = false
doc = false
bench = false

[[bin]]
name = "workstream_cluster"
path = "fuzz_targets/workstream_cluster.rs"
test = false
doc = false
bench = false

[[bin]]
name = "cluster_llm_prompt"
path = "fuzz_targets/cluster_llm_prompt.rs"
test = false
doc = false
bench = false

[[bin]]
name = "cluster_llm_parse"
path = "fuzz_targets/cluster_llm_parse.rs"
test = false
doc = false
bench = false

[[bin]]
name = "workstream_receipt_policy"
path = "fuzz_targets/workstream_receipt_policy.rs"
test = false
doc = false
bench = false

[[bin]]
name = "workstream_layout"
path = "fuzz_targets/workstream_layout.rs"
test = false
doc = false
bench = false

# ============================================================================
# Critical-Crate Fuzzing Targets
# ============================================================================

[[bin]]
name = "fuzz_workstream_yaml"
path = "fuzz_targets/fuzz_workstream_yaml.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_cache_key"
path = "fuzz_targets/fuzz_cache_key.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_team_config"
path = "fuzz_targets/fuzz_team_config.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_ingest_jsonl"
path = "fuzz_targets/fuzz_ingest_jsonl.rs"
test = false
doc = false
bench = false

[[bin]]
name = "render_md_packet"
path = "fuzz_targets/render_md_packet.rs"
test = false
doc = false
bench = false

[[bin]]
name = "bundle_checksum"
path = "fuzz_targets/bundle_checksum.rs"
test = false
doc = false
bench = false

[[bin]]
name = "workstream_yaml_roundtrip"
path = "fuzz_targets/workstream_yaml_roundtrip.rs"
test = false
doc = false
bench = false
