[package]
name = "xtask"
version = "0.11.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
description = "Rust-native policy runner and release-proof aggregator for shiplog (dev-only)."
publish = false

[dependencies]
anyhow.workspace = true
chrono.workspace = true
clap = { workspace = true, features = ["env"] }
globset = "0.4"
regex.workspace = true
serde = { workspace = true }
serde_json.workspace = true
serde_yaml.workspace = true
toml.workspace = true

[dev-dependencies]
assert_cmd.workspace = true
predicates.workspace = true
tempfile.workspace = true

[lints]
workspace = true
