[package]
name = "shiplog"
version = "0.3.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
description = "CLI for generating self-review packets from GitHub/manual activity with receipts and coverage."
readme = "README.md"
documentation = "https://docs.rs/shiplog"
repository.workspace = true
homepage.workspace = true
keywords = ["cli", "github", "self-review", "workstreams", "redaction"]
categories = ["command-line-utilities", "development-tools"]

[features]
default = []
llm = ["dep:shiplog-cluster-llm"]

[dependencies]
anyhow.workspace = true
clap.workspace = true
chrono.workspace = true
regex.workspace = true
reqwest.workspace = true
serde.workspace = true
toml.workspace = true
shiplog-engine = { path = "../../crates/shiplog-engine", version = "0.3.0" }
shiplog-ingest-github = { path = "../../crates/shiplog-ingest-github", version = "0.3.0" }
shiplog-ingest-git = { path = "../../crates/shiplog-ingest-git", version = "0.3.0" }
shiplog-ingest-gitlab = { path = "../../crates/shiplog-ingest-gitlab", version = "0.3.0" }
shiplog-ingest-jira = { path = "../../crates/shiplog-ingest-jira", version = "0.3.0" }
shiplog-ingest-linear = { path = "../../crates/shiplog-ingest-linear", version = "0.3.0" }
shiplog-ingest-json = { path = "../../crates/shiplog-ingest-json", version = "0.3.0" }
shiplog-ingest-manual = { path = "../../crates/shiplog-ingest-manual", version = "0.3.0" }
shiplog-cache = { path = "../../crates/shiplog-cache", version = "0.3.0" }
shiplog-render-md = { path = "../../crates/shiplog-render-md", version = "0.3.0" }
shiplog-workstreams = { path = "../../crates/shiplog-workstreams", version = "0.3.0" }
shiplog-redact = { path = "../../crates/shiplog-redact", version = "0.3.0" }
shiplog-ports = { path = "../../crates/shiplog-ports", version = "0.3.0" }
shiplog-schema = { path = "../../crates/shiplog-schema", version = "0.3.0" }
shiplog-ids = { path = "../../crates/shiplog-ids", version = "0.3.0" }
shiplog-cluster-llm = { path = "../../crates/shiplog-cluster-llm", version = "0.3.0", optional = true }

[dev-dependencies]
tempfile.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
anyhow.workspace = true
chrono.workspace = true
assert_cmd.workspace = true
predicates.workspace = true
shiplog-engine = { path = "../../crates/shiplog-engine", version = "0.3.0" }
shiplog-ingest-json = { path = "../../crates/shiplog-ingest-json", version = "0.3.0" }
shiplog-ingest-manual = { path = "../../crates/shiplog-ingest-manual", version = "0.3.0" }
shiplog-ports = { path = "../../crates/shiplog-ports", version = "0.3.0" }
shiplog-schema = { path = "../../crates/shiplog-schema", version = "0.3.0" }
shiplog-render-md = { path = "../../crates/shiplog-render-md", version = "0.3.0" }
shiplog-redact = { path = "../../crates/shiplog-redact", version = "0.3.0" }
shiplog-workstreams = { path = "../../crates/shiplog-workstreams", version = "0.3.0" }

[[example]]
name = "json_import"
path = "../../examples/json_import.rs"

[[example]]
name = "custom_renderer"
path = "../../examples/custom_renderer.rs"

[[example]]
name = "redaction"
path = "../../examples/redaction.rs"

[lints]
workspace = true
