[package]
name = "shiplog"
version = "0.6.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
description = "CLI evidence compiler for review-cycle packets with receipts, coverage, gaps, and safe share profiles."
readme = "README.md"
documentation = "https://docs.rs/shiplog"
repository.workspace = true
homepage.workspace = true
keywords = ["cli", "github", "self-review", "workstreams", "redaction"]
categories = ["command-line-utilities", "development-tools"]

[features]
default = []
llm = ["dep:shiplog-cluster-llm"]
merge-pipeline = []

[dependencies]
anyhow.workspace = true
clap.workspace = true
chrono.workspace = true
regex.workspace = true
reqwest.workspace = true
rusqlite.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
url.workspace = true
hex.workspace = true
sha2.workspace = true
toml.workspace = true
itertools.workspace = true
git2 = "0.20"
mutants.workspace = true
shiplog-bundle = { path = "../../crates/shiplog-bundle", version = "0.6.0" }
shiplog-merge = { path = "../../crates/shiplog-merge", version = "0.6.0" }
shiplog-workstreams = { path = "../../crates/shiplog-workstreams", version = "0.6.0" }
shiplog-redact = { path = "../../crates/shiplog-redact", version = "0.6.0" }
shiplog-ports = { path = "../../crates/shiplog-ports", version = "0.6.0" }
shiplog-schema = { path = "../../crates/shiplog-schema", version = "0.6.0" }
shiplog-ids = { path = "../../crates/shiplog-ids", version = "0.6.0" }
shiplog-cluster-llm = { path = "../../crates/shiplog-cluster-llm", version = "0.6.0", optional = true }

[dev-dependencies]
tempfile.workspace = true
anyhow.workspace = true
chrono.workspace = true
assert_cmd.workspace = true
predicates.workspace = true
insta = { workspace = true, features = ["json", "redactions"] }
proptest.workspace = true
criterion.workspace = true
shiplog-ports = { path = "../../crates/shiplog-ports", version = "0.6.0" }
shiplog-schema = { path = "../../crates/shiplog-schema", version = "0.6.0" }
shiplog-redact = { path = "../../crates/shiplog-redact", version = "0.6.0" }
shiplog-workstreams = { path = "../../crates/shiplog-workstreams", version = "0.6.0" }
shiplog-ids = { path = "../../crates/shiplog-ids", version = "0.6.0" }
shiplog-testkit = { path = "../../crates/shiplog-testkit" }

[[example]]
name = "json_import"
path = "../../examples/json_import.rs"

[[example]]
name = "custom_renderer"
path = "../../examples/custom_renderer.rs"

[[example]]
name = "redaction"
path = "../../examples/redaction.rs"

[[bench]]
name = "coverage"
harness = false

[lints]
workspace = true
