[package]
name = "shiplog"
version = "0.11.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
description = "CLI evidence compiler for review-cycle packets with receipts, coverage, gaps, and safe share profiles."
readme = "README.md"
documentation = "https://docs.rs/shiplog"
repository.workspace = true
homepage.workspace = true
keywords = ["cli", "github", "self-review", "workstreams", "redaction"]
categories = ["command-line-utilities", "development-tools"]

[package.metadata.binstall]
pkg-url = "{ repo }/releases/download/v{ version }/{ name }-{ target }{ archive-suffix }"
bin-dir = "{ bin }-{ target }{ binary-ext }"
pkg-fmt = "bin"
disabled-strategies = ["quick-install", "compile"]

[features]
default = []
llm = []
merge-pipeline = []

[dependencies]
anyhow.workspace = true
clap.workspace = true
chrono.workspace = true
regex.workspace = true
reqwest.workspace = true
rusqlite.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
url.workspace = true
hex.workspace = true
sha2.workspace = true
toml.workspace = true
itertools.workspace = true
zip.workspace = true
git2 = "0.21"
mutants.workspace = true

[dev-dependencies]
tempfile.workspace = true
anyhow.workspace = true
chrono.workspace = true
assert_cmd.workspace = true
predicates.workspace = true
insta = { workspace = true, features = ["json", "redactions"] }
proptest.workspace = true
criterion.workspace = true
shiplog-testkit = { path = "../../crates/shiplog-testkit" }
tokio.workspace = true

[[example]]
name = "json_import"
path = "../../examples/json_import.rs"

[[example]]
name = "custom_renderer"
path = "../../examples/custom_renderer.rs"

[[example]]
name = "redaction"
path = "../../examples/redaction.rs"

[[bench]]
name = "coverage"
harness = false

[[bench]]
name = "id_generation"
harness = false

[[bench]]
name = "redaction"
harness = false

[[bench]]
name = "serialization"
harness = false

[lints]
workspace = true
