[package]
name = "shiplog-bundle"
version = "0.3.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
description = "Bundle manifest and profile-scoped zip writer for shiplog run directories."
readme = "README.md"
documentation = "https://docs.rs/shiplog-bundle"
repository.workspace = true
homepage.workspace = true
keywords = ["bundle", "zip", "checksum", "manifest", "artifacts"]
categories = ["filesystem", "development-tools"]

[dependencies]
anyhow.workspace = true
chrono.workspace = true
sha2.workspace = true
hex.workspace = true
serde_json.workspace = true
zip.workspace = true
shiplog-schema = { path = "../shiplog-schema", version = "0.3.0" }
shiplog-ids = { path = "../shiplog-ids", version = "0.3.0" }

[dev-dependencies]
tempfile.workspace = true
proptest.workspace = true
insta = { workspace = true, features = ["json"] }
serde_json.workspace = true
sha2.workspace = true
hex.workspace = true
zip.workspace = true
shiplog-ids = { path = "../shiplog-ids", version = "0.3.0" }
shiplog-schema = { path = "../shiplog-schema", version = "0.3.0" }

[lints]
workspace = true
