[package]
name = "shiplog-cache"
version = "0.2.1"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
description = "SQLite cache with TTL and key helpers for shiplog GitHub API calls."
readme = "README.md"
documentation = "https://docs.rs/shiplog-cache"
repository.workspace = true
homepage.workspace = true
keywords = ["cache", "sqlite", "ttl", "github", "api"]
categories = ["caching", "development-tools"]

[dependencies]
anyhow.workspace = true
chrono.workspace = true
rusqlite = { version = "0.38.0", features = ["bundled", "chrono", "serde_json"] }
serde.workspace = true
serde_json.workspace = true

[dev-dependencies]
proptest.workspace = true
insta.workspace = true
tempfile.workspace = true
shiplog-testkit = { path = "../shiplog-testkit", version = "0.2.1" }

[lints]
workspace = true
