[package]
name = "shiplog-coverage"
version = "0.2.1"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
description = "Date-window slicing utilities used by shiplog adaptive ingestion."
readme = "README.md"
documentation = "https://docs.rs/shiplog-coverage"
repository.workspace = true
homepage.workspace = true
keywords = ["coverage", "date-range", "time-window", "slicing", "ingestion"]
categories = ["date-and-time", "development-tools"]

[dependencies]
chrono.workspace = true
shiplog-schema = { path = "../shiplog-schema", version = "0.2.1" }

[dev-dependencies]
anyhow.workspace = true
criterion.workspace = true
insta = { workspace = true, features = ["json"] }
proptest.workspace = true
serde_json.workspace = true
shiplog-ids = { path = "../shiplog-ids", version = "0.2.1" }
shiplog-testkit = { path = "../shiplog-testkit", version = "0.2.1" }

[[bench]]
name = "coverage"
harness = false

[lints]
workspace = true
