[package]
name = "shiplog-engine"
version = "0.3.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
description = "Pipeline orchestrator that drives collect, render, refresh, and import flows."
readme = "README.md"
documentation = "https://docs.rs/shiplog-engine"
repository.workspace = true
homepage.workspace = true
keywords = ["orchestration", "pipeline", "workflow", "rendering", "ingestion"]
categories = ["development-tools", "command-line-utilities"]

[features]
merge-pipeline = []

[dependencies]
anyhow.workspace = true
chrono.workspace = true
serde_yaml.workspace = true
shiplog-ids = { path = "../shiplog-ids", version = "0.3.0" }
shiplog-schema = { path = "../shiplog-schema", version = "0.3.0" }
shiplog-ports = { path = "../shiplog-ports", version = "0.3.0" }
shiplog-workstreams = { path = "../shiplog-workstreams", version = "0.3.0" }
shiplog-redact = { path = "../shiplog-redact", version = "0.3.0" }
serde_json.workspace = true
shiplog-render-md = { path = "../shiplog-render-md", version = "0.3.0" }
shiplog-render-json = { path = "../shiplog-render-json", version = "0.3.0" }
shiplog-bundle = { path = "../shiplog-bundle", version = "0.3.0" }
shiplog-merge = { path = "../shiplog-merge", version = "0.3.0" }

[dev-dependencies]
tempfile.workspace = true
anyhow.workspace = true
chrono.workspace = true
proptest.workspace = true
serde_yaml.workspace = true
shiplog-ids = { path = "../shiplog-ids", version = "0.3.0" }
shiplog-schema = { path = "../shiplog-schema", version = "0.3.0" }
shiplog-ports = { path = "../shiplog-ports", version = "0.3.0" }
shiplog-testkit = { path = "../shiplog-testkit" }
shiplog-bundle = { path = "../shiplog-bundle", version = "0.3.0" }
shiplog-workstreams = { path = "../shiplog-workstreams", version = "0.3.0" }
shiplog-render-md = { path = "../shiplog-render-md", version = "0.3.0" }
shiplog-render-json = { path = "../shiplog-render-json", version = "0.3.0" }
shiplog-redact = { path = "../shiplog-redact", version = "0.3.0" }
serde_json.workspace = true
shiplog-ingest-json = { path = "../shiplog-ingest-json", version = "0.3.0" }

[lints]
workspace = true
