[package]
name = "shiplog-ids"
version = "0.2.1"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
description = "Deterministic SHA-256 identifier types (EventId, WorkstreamId, RunId) for shiplog."
readme = "README.md"
documentation = "https://docs.rs/shiplog-ids"
repository.workspace = true
homepage.workspace = true
keywords = ["ids", "sha256", "deterministic", "event", "workstream"]
categories = ["data-structures", "development-tools"]

[dependencies]
serde.workspace = true
sha2.workspace = true
hex.workspace = true

[dev-dependencies]
criterion.workspace = true
hex.workspace = true
insta = { workspace = true, features = ["json"] }
proptest.workspace = true
serde_json.workspace = true

[[bench]]
name = "id_generation"
harness = false

[lints]
workspace = true
