[package]
name = "shiplog-ingest-git"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
description = "Local git repository ingestor for shiplog: collect commit history directly from local git repositories."
readme = "README.md"
documentation = "https://docs.rs/shiplog-ingest-git"
repository.workspace = true
homepage.workspace = true
keywords = ["git", "ingest", "commit-history", "shiplog"]
categories = ["development-tools", "command-line-utilities"]

[dependencies]
anyhow.workspace = true
chrono.workspace = true
git2 = "0.20"
mutants.workspace = true
shiplog-ids = { path = "../shiplog-ids", version = "0.2.1" }
shiplog-ports = { path = "../shiplog-ports", version = "0.2.1" }
shiplog-schema = { path = "../shiplog-schema", version = "0.2.1" }
shiplog-cache = { path = "../shiplog-cache", version = "0.2.1", optional = true }

[dev-dependencies]
tempfile.workspace = true
proptest.workspace = true

[features]
default = []
cache = ["dep:shiplog-cache"]

[lints]
workspace = true
