[package]
name = "shiplog-ingest-github"
version = "0.2.1"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
description = "GitHub PR/review ingestor with adaptive date slicing and optional SQLite cache."
readme = "README.md"
documentation = "https://docs.rs/shiplog-ingest-github"
repository.workspace = true
homepage.workspace = true
keywords = ["github", "api", "ingestion", "reviews", "coverage"]
categories = ["web-programming::http-client", "development-tools"]

[dependencies]
anyhow.workspace = true
chrono.workspace = true
mutants.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
url.workspace = true
shiplog-ids = { path = "../shiplog-ids", version = "0.2.1" }
shiplog-schema = { path = "../shiplog-schema", version = "0.2.1" }
shiplog-ports = { path = "../shiplog-ports", version = "0.2.1" }
shiplog-coverage = { path = "../shiplog-coverage", version = "0.2.1" }
shiplog-cache = { path = "../shiplog-cache", version = "0.2.1" }

[dev-dependencies]
proptest.workspace = true
tempfile.workspace = true

[lints]
workspace = true
