[package]
name = "shiplog-ingest-gitlab"
version = "0.3.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
description = "GitLab MR/review ingestor with adaptive date slicing and optional SQLite cache."
readme = "README.md"
documentation = "https://docs.rs/shiplog-ingest-gitlab"
repository.workspace = true
homepage.workspace = true
keywords = ["gitlab", "api", "ingestion", "reviews", "coverage"]
categories = ["web-programming::http-client", "development-tools"]

[dependencies]
anyhow.workspace = true
chrono.workspace = true
mutants.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
url.workspace = true
shiplog-ids = { path = "../shiplog-ids", version = "0.2.1" }
shiplog-schema = { path = "../shiplog-schema", version = "0.2.1" }
shiplog-ports = { path = "../shiplog-ports", version = "0.2.1" }
shiplog-coverage = { path = "../shiplog-coverage", version = "0.2.1" }
shiplog-cache = { path = "../shiplog-cache", version = "0.2.1" }

[dev-dependencies]
tempfile.workspace = true
proptest.workspace = true
serde_json.workspace = true

[lints]
workspace = true
