[package]
name = "shiplog-ingest-json"
version = "0.3.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
description = "Ingestor for canonical shiplog JSONL events and JSON coverage manifests."
readme = "README.md"
documentation = "https://docs.rs/shiplog-ingest-json"
repository.workspace = true
homepage.workspace = true
keywords = ["jsonl", "ingestion", "import", "ledger", "coverage"]
categories = ["parser-implementations", "development-tools"]

[dependencies]
anyhow.workspace = true
serde_json.workspace = true
shiplog-ports = { path = "../shiplog-ports", version = "0.3.0" }
shiplog-schema = { path = "../shiplog-schema", version = "0.3.0" }

[dev-dependencies]
tempfile.workspace = true
chrono.workspace = true
serde.workspace = true
serde_json.workspace = true
proptest.workspace = true
shiplog-ids = { path = "../shiplog-ids", version = "0.3.0" }
shiplog-bundle = { path = "../shiplog-bundle", version = "0.3.0" }

[lints]
workspace = true
