[package]
name = "shiplog-ingest-linear"
version = "0.3.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
description = "Linear issue/ticket ingestor with API integration."
readme = "README.md"
documentation = "https://docs.rs/shiplog-ingest-linear"
repository.workspace = true
homepage.workspace = true
keywords = ["linear", "api", "ingestion", "issues", "tickets"]
categories = ["web-programming::http-client", "development-tools"]

[dependencies]
anyhow.workspace = true
chrono.workspace = true
mutants.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
url.workspace = true
shiplog-ids = { path = "../shiplog-ids", version = "0.2.1" }
shiplog-schema = { path = "../shiplog-schema", version = "0.2.1" }
shiplog-ports = { path = "../shiplog-ports", version = "0.2.1" }
shiplog-coverage = { path = "../shiplog-coverage", version = "0.2.1" }
shiplog-cache = { path = "../shiplog-cache", version = "0.2.1" }

[dev-dependencies]
tempfile.workspace = true
serde_json.workspace = true
proptest.workspace = true
insta.workspace = true

[lints]
workspace = true
