[package]
name = "shiplog-ingest-manual"
version = "0.2.1"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
description = "YAML manual-event ingestor for non-GitHub work in shiplog."
readme = "README.md"
documentation = "https://docs.rs/shiplog-ingest-manual"
repository.workspace = true
homepage.workspace = true
keywords = ["yaml", "manual", "ingestion", "events", "worklogs"]
categories = ["parser-implementations", "development-tools"]

[dependencies]
anyhow.workspace = true
chrono.workspace = true
serde_yaml.workspace = true
shiplog-ids = { path = "../shiplog-ids", version = "0.2.1" }
shiplog-schema = { path = "../shiplog-schema", version = "0.2.1" }
shiplog-ports = { path = "../shiplog-ports", version = "0.2.1" }

[dev-dependencies]
chrono.workspace = true
insta = { workspace = true, features = ["redactions"] }
proptest.workspace = true
shiplog-schema = { path = "../shiplog-schema", version = "0.2.1" }
shiplog-ports = { path = "../shiplog-ports", version = "0.2.1" }
shiplog-testkit = { path = "../shiplog-testkit", version = "0.2.1" }
tempfile = "3"

[lints]
workspace = true
