[package]
name = "shiplog-ports"
version = "0.3.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
description = "Core port traits for shiplog adapters: Ingestor, WorkstreamClusterer, Renderer, Redactor."
readme = "README.md"
documentation = "https://docs.rs/shiplog-ports"
repository.workspace = true
homepage.workspace = true
keywords = ["traits", "ports", "hexagonal", "architecture", "pipeline"]
categories = ["development-tools", "rust-patterns"]

[dependencies]
anyhow.workspace = true
shiplog-schema = { path = "../shiplog-schema", version = "0.3.0" }

[dev-dependencies]
chrono.workspace = true
tokio.workspace = true
proptest.workspace = true
shiplog-ids = { path = "../shiplog-ids", version = "0.3.0" }
shiplog-schema = { path = "../shiplog-schema", version = "0.3.0" }

[lints]
workspace = true
