[package]
name = "shiplog-redact"
version = "0.3.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
description = "Deterministic profile-based redaction engine for shiplog events and workstreams."
readme = "README.md"
documentation = "https://docs.rs/shiplog-redact"
repository.workspace = true
homepage.workspace = true
keywords = ["redaction", "hmac", "privacy", "anonymization", "deterministic"]
categories = ["development-tools", "text-processing"]

[dependencies]
anyhow.workspace = true
hex.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
shiplog-schema = { path = "../shiplog-schema", version = "0.3.0" }
shiplog-ports = { path = "../shiplog-ports", version = "0.3.0" }

[dev-dependencies]
criterion.workspace = true
proptest.workspace = true
chrono.workspace = true
tempfile.workspace = true
shiplog-ids = { path = "../shiplog-ids", version = "0.3.0" }
shiplog-testkit = { path = "../shiplog-testkit" }

[[bench]]
name = "redaction"
harness = false

[lints]
workspace = true
