[package]
name = "shiplog-render-json"
version = "0.2.1"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
description = "Writers for canonical shiplog JSON artifacts (ledger.events.jsonl and coverage.manifest.json)."
readme = "README.md"
documentation = "https://docs.rs/shiplog-render-json"
repository.workspace = true
homepage.workspace = true
keywords = ["jsonl", "json", "renderer", "serialization", "artifacts"]
categories = ["encoding", "development-tools"]

[dependencies]
anyhow.workspace = true
serde_json.workspace = true
shiplog-schema = { path = "../shiplog-schema", version = "0.2.1" }

[dev-dependencies]
tempfile.workspace = true
shiplog-ids = { path = "../shiplog-ids", version = "0.2.1" }
shiplog-schema = { path = "../shiplog-schema", version = "0.2.1" }
chrono.workspace = true
proptest.workspace = true
shiplog-testkit = { path = "../shiplog-testkit", version = "0.2.1" }
insta.workspace = true
serde_json.workspace = true

[lints]
workspace = true
